# lostcolonies

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerOptions.cmake  StandardSettings.cmake  version.hpp.in
resource_web/: minishell.html  resourcedata.c  shell.html
src/: cli.hpp  config.hpp  dm_property_list.h  engine.hpp  ffmpeg_encode.cpp  ffmpeg_encode.hpp  font8x8.h  gradient.cpp  gradient.hpp  hash.hpp  main.cpp  math.hpp  noise.cpp  noise.hpp  noise1234.c  particles.hpp  procedural.cpp  procedural.hpp  random.cpp  random.hpp  raygui.hpp  raymath.hpp  resources.cpp  scene.cpp  scene.hpp  scene_base.hpp  scene_generators.cpp  scene_generators.hpp  scene_ingame.hpp  scene_setup.hpp  scene_startup.hpp  sound.cpp  sound.hpp  sprite.hpp  spritemanager.cpp  spritemanager.hpp  vectorfont.cpp  vectorfont.hpp
